# robot-repo-2

./: README.md  lstm_model_v1.pth  seokwon_teleop.py
depth_example/: package.xml  setup.py
depth_example/depth_example/: Streaming_for_loop_with_tracking.py  basic_distance.py  detect.py  detect_node.py  detect_seg_node.py  dist_node.py  lstm_seg_node.py  open3d_test.py  open3d_viewer.py  test.py  yolov8_box_tracking.py  yolov8_seg_tracking.py  yolov8_tracking.py
depth_example/launch/: merge_pose_seg.launch.py  person_dist.launch.py  person_seg.launch.py
depth_example/param/: config.yaml
depth_ros/: lstm_long_data_model_v1.pth
depth_ros/src/: setup.py
depth_ros/src/depth_example/: detect_node.py  detect_pose_node.py  detect_seg_node.py  lstm_seg_node.py  merge_pose_seg_node.py
depth_ros/src/launch/: merge_lstm_seg.launch.py  person_dist.launch.py  person_pose.launch.py
depth_ros/src/param/: config.yaml
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin
devel/.private/open_manipulator/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/open_manipulator_control_gui/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/open_manipulator_controller/: .catkin  .rosinstall  local_setup.sh
devel/.private/open_manipulator_controllers/: .catkin
devel/.private/open_manipulator_controls/: .catkin
devel/.private/open_manipulator_description/: .catkin  local_setup.sh  setup.sh
devel/.private/open_manipulator_gazebo/: .catkin  setup.sh
devel/.private/open_manipulator_hw/: .catkin  .rosinstall  setup.sh
devel/.private/open_manipulator_libs/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/open_manipulator_moveit_config/: .catkin  .rosinstall
devel/.private/open_manipulator_msgs/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/open_manipulator_simulations/: .catkin
devel/.private/open_manipulator_teleop/: .catkin  .rosinstall  setup.sh
devel/.private/roboticsgroup_gazebo_plugins/: .catkin  setup.sh
devel/include/open_manipulator_control_gui/: ui_main_window.h
devel/include/open_manipulator_msgs/: GetJointPosition.h  GetJointPositionRequest.h  GetJointPositionResponse.h  GetKinematicsPose.h  GetKinematicsPoseRequest.h  GetKinematicsPoseResponse.h  JointPosition.h  KinematicsPose.h  OpenManipulatorState.h  SetActuatorState.h  SetActuatorStateRequest.h  SetActuatorStateResponse.h  SetDrawingTrajectory.h  SetDrawingTrajectoryRequest.h  SetDrawingTrajectoryResponse.h  SetJointPosition.h  SetJointPositionRequest.h  SetJointPositionResponse.h  SetKinematicsPose.h  SetKinematicsPoseRequest.h  SetKinematicsPoseResponse.h
devel/lib/open_manipulator_control_gui/: open_manipulator_control_gui
devel/lib/open_manipulator_controller/: open_manipulator_controller
devel/lib/open_manipulator_gazebo/: omx_gripper_sub_publisher
devel/lib/open_manipulator_hw/: omx_control_node
devel/lib/open_manipulator_teleop/: open_manipulator_teleop_joystick  open_manipulator_teleop_keyboard
devel/lib/pkgconfig/: catkin_tools_prebuild.pc  open_manipulator_control_gui.pc  open_manipulator_controller.pc  open_manipulator_controllers.pc  open_manipulator_description.pc  open_manipulator_gazebo.pc  open_manipulator_hw.pc  open_manipulator_libs.pc  open_manipulator_moveit_config.pc  open_manipulator_msgs.pc  open_manipulator_teleop.pc  roboticsgroup_gazebo_plugins.pc
devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
devel/share/open_manipulator_control_gui/cmake/: open_manipulator_control_guiConfig-version.cmake  open_manipulator_control_guiConfig.cmake
devel/share/open_manipulator_controller/cmake/: open_manipulator_controllerConfig-version.cmake  open_manipulator_controllerConfig.cmake
devel/share/open_manipulator_controllers/cmake/: open_manipulator_controllersConfig-version.cmake  open_manipulator_controllersConfig.cmake
devel/share/open_manipulator_description/cmake/: open_manipulator_descriptionConfig-version.cmake  open_manipulator_descriptionConfig.cmake
devel/share/open_manipulator_gazebo/cmake/: open_manipulator_gazeboConfig-version.cmake  open_manipulator_gazeboConfig.cmake
devel/share/open_manipulator_hw/cmake/: open_manipulator_hwConfig-version.cmake  open_manipulator_hwConfig.cmake
devel/share/open_manipulator_libs/cmake/: open_manipulator_libsConfig-version.cmake  open_manipulator_libsConfig.cmake
devel/share/open_manipulator_moveit_config/cmake/: open_manipulator_moveit_configConfig-version.cmake  open_manipulator_moveit_configConfig.cmake
devel/share/open_manipulator_msgs/cmake/: open_manipulator_msgs-msg-extras.cmake  open_manipulator_msgs-msg-paths.cmake  (+2 more)
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
joint_angle_calculate/src/: jonit_angle_calculator.py
log/: latest_build
logs/open_manipulator_teleop/: build.make.044.log.stderr
pose_lstm/: yolov8_pose_lstm.py
pose_lstm/src/launch/: decisiontree_3point.ipynb  yolov8_pose_lstm.py  yolov8_pose_lstm_v3_letter.py
realsense_human_tracking/: CMakeLists.txt  package.xml
realsense_human_tracking/src/: cluster_extraction.cpp  color_image.cpp  human_pcl.cpp  pcd_concatenation.cpp  pcl_dbscan.cpp  pcl_visualizer_demo.cpp  pointcloud_test.cpp  test.cpp
src/: setup.py
src/ai_manipulation/: package.xml  setup.py
src/ai_manipulation/ai_manipulation/: make_my_model.py  run_my_model.py
src/dynamixel-workbench/dynamixel_workbench_toolbox/: CMakeLists.txt
src/my_new_package/: setup.py
src/my_new_package/my_new_package/: 11.10backupmvp.py  119backbasic.py  backupbasic2.py  backupworksbtn.py  basic.py  basic.ui  mvpbasic.py  shoebotVer.0.01.ui  shoebotVer.0.98.ui  sound.py
src/my_talker_listener_package/: package.xml  setup.cfg  setup.py
src/my_talker_listener_package/my_talker_listener_package/: listener.py  listener_node.py  talker.py  talker_node.py  testimport.py  testpyqt.ui
src/param/: config.yaml
(+683 files in other folders)
